# beeai-platform-agent-starter

./: README.md  pyproject.toml
.github/workflows/: build-agent.yaml
src/hello_world/: __main__.py  agent.py
