[project]
name = "hello-world"
version = "0.1.1"
description = "hello world agent"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk>=0.2.12",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "hello_world.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
